--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,6 +2,8 @@
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  background-color: black;
+  overflow-x: hidden; 
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -29,6 +31,181 @@ body {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
+}
+
+.heroname{
+  display:inline-block;
+}
+
+#main-container, #main{
+  z-index: 11;
+}
+
+#background div{
+position: absolute;
+-webkit-animation-iteration-count: infinite;
+-moz-animation-iteration-count: infinite;
+-ms-animation-iteration-count: infinite;
+-o-animation-iteration-count: infinite;
+animation-iteration-count: infinite;
+/*-webkit-animation-timing-function: linear;
+-moz-animation-timing-function: linear;
+-ms-animation-timing-function: linear;
+-o-animation-timing-function: linear;
+animation-timing-function: linear;*/
+}
+
+#sky div{
+   background-repeat: no-repeat;
+    -webkit-animation-name: prop-1200;
+    -moz-animation-name: prop-1200;
+    -ms-animation-name: prop-1200;
+    -o-animation-name: prop-1200;
+    animation-name: prop-1200;
+}
+
+#sky .cloud-1{
+  width: 700px;
+  height: 62px;
+    background-image: url(../images/clouds/1.png);
+    -webkit-animation-duration: 160s;
+    -moz-animation-duration: 160s;
+    -ms-animation-duration: 160s;
+    -o-animation-duration: 160s;
+    animation-duration: 160s;
+}
+
+#sky .cloud-2{
+  width: 354px;
+  height: 68px;
+  top:30px;
+    background-image: url(../images/clouds/2.png);
+    -webkit-animation-duration: 120s;
+    -moz-animation-duration: 120s;
+    -ms-animation-duration: 120s;
+    -o-animation-duration: 120s;
+    animation-duration: 120s;
+}
+
+#sky .cloud-3{
+  width: 354px;
+  height: 68px;
+  top: 15px;
+    background-image: url(../images/clouds/2.png);
+    -webkit-animation-duration: 120s;
+    -moz-animation-duration: 60s;
+    -ms-animation-duration: 60s;
+    -o-animation-duration: 60s;
+    animation-duration: 60s;
+}
+#sky .cloud-4{
+  top: 50px;
+  width: 354px;
+  height: 68px;
+    background-image: url(../images/clouds/2.png);
+    -webkit-animation-duration: 220s;
+    -moz-animation-duration: 220s;
+    -ms-animation-duration: 220s;
+    -o-animation-duration: 220s;
+    animation-duration: 220s;
+}
+
+.cloud-1 { left: 0px; }
+.cloud-2 { left: -1200px; }
+.cloud-3 { left: -200px; }
+.cloud-4 { left: -700px; }
+
+
+#horizon {
+bottom: 85px;
+}
+#horizon > div{
+    position: absolute;
+  width: 3405px;
+    -webkit-animation-name: prop-600;
+    -moz-animation-name: prop-600;
+    -ms-animation-name: prop-600;
+    -o-animation-name: prop-600;
+    animation-name: prop-600;
+}
+#horizon .hor-bg-1{
+    bottom: 100px; left: -30px;
+    height: 270px;
+    background: url(../images/horizon/1.png) repeat-x;
+    -webkit-animation-duration: 80s;
+    -moz-animation-duration: 80s;
+    -ms-animation-duration: 80s;
+    -o-animation-duration: 80s;
+    animation-duration: 80s;
+    z-index: 1;
+}
+#horizon .hor-bg-2{
+    bottom: 50px; left: -420px;
+    height: 270px;
+    background: url(../images/horizon/2.png) repeat-x;
+    -webkit-animation-duration: 60s;
+    -moz-animation-duration: 60s;
+    -ms-animation-duration: 60s;
+    -o-animation-duration: 60s;
+    animation-duration: 60s;
+    z-index: 2;
+}
+
+#horizon .hor-bg-3{
+    bottom: 10px; 545px; left: -260px;
+    height: 270px;
+    background: url(../images/horizon/3.png) repeat-x;
+    -webkit-animation-duration: 30s;
+    -moz-animation-duration: 30s;
+    -ms-animation-duration: 30s;
+    -o-animation-duration: 30s;
+    animation-duration: 30s;
+    z-index: 3;
+}
+#horizon .hor-bg-4{
+    bottom: 605px; left: -130px;
+    height: 270px;
+    background: url(../images/horizon/4.png) repeat-x;
+    -webkit-animation-duration: 40s;
+    -moz-animation-duration: 40s;
+    -ms-animation-duration: 40s;
+    -o-animation-duration: 40s;
+    animation-duration: 40s;
+    z-index: 4;
+}
+
+#floor{
+  bottom: -10px; 
+    height: 270px; width: 4581px;
+    background: url(../images/floor.png) repeat-x;
+    -webkit-animation-name: prop-600;
+    -moz-animation-name: prop-600;
+    -ms-animation-name: prop-600;
+    -o-animation-name: prop-600;
+    animation-name: prop-600;
+    -webkit-animation-duration: 30s;
+    -moz-animation-duration: 30s;
+    -ms-animation-duration: 30s;
+    -o-animation-duration: 30s;
+    animation-duration: 30s;
+    z-index: 4;
+}
+
+#hero{
+  bottom:190px; left:100px;
+  width:43px;
+  height: 43px;
+  z-index: 10;
+  background-image: url(../images/heroes/avian-fem.png);
+  -webkit-transform: scale(2,2);
+  -moz-transform: scale(2,2);
+  -o-transform: scale(2,2);
+  transform: scale(2,2);
+  -webkit-animation: hero-walk .8s steps(8) infinite; 
+  -moz-animation: hero-walk .8s steps(8) infinite;
+  -o-animation: hero-walk .8s steps(8) infinite;
+  -ms-animation: hero-walk .8s steps(8) infinite;
+  animation: hero-walk .8s steps(8) infinite;
 }
 
 /* Customize container */
