--- a/app/views/race.html
+++ b/app/views/race.html
@@ -1,4 +1,5 @@
-<section id="main" ng-controller="RaceCtrl">
+<div ng-controller="RaceCtrl">
+<section id="main">
 	<table class="table">
 		<thead>
 			<tr class="row">
@@ -28,6 +29,7 @@
 			</tr>
 		</tbody>
 	</table>
+</section>
 	<!-- Modal -->
 <div class="modal fade" id="creationModal" tabindex="-1" role="dialog" aria-labelledby="creationModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -47,4 +49,4 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-</section>
+</div>
