--- a/app/views/weapon.html
+++ b/app/views/weapon.html
@@ -1,3 +1,4 @@
+<div ng-controller="WeaponCtrl">
 <section id="main" ng-controller="WeaponCtrl">
 	<table class="table">
 		<thead>
@@ -35,6 +36,7 @@
 			</tr>
 		</tbody>
 	</table>
+</section>
 	<!-- Modal -->
 <div class="modal fade" id="creationModal" tabindex="-1" role="dialog" aria-labelledby="creationModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -56,4 +58,4 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-</section>
+</div>
