--- a/app/styles/moz-keyframes.css
+++ b/app/styles/moz-keyframes.css
@@ -8,6 +8,12 @@
     100% { -moz-transform: translateX(-1200px); }
 }
 
+
+@-moz-keyframes prop-1500 {
+    0%   { -moz-transform: translateX(0px); }
+    100% { -moz-transform: translateX(-1527px); }
+}
+
 @-moz-keyframes hero-walk{
 	from {background-position: 0px;}
 	to {background-position: -344px;}
