--- a/app/views/hero.html
+++ b/app/views/hero.html
@@ -1,4 +1,5 @@
-<section id="main" ng-controller="HeroCtrl">
+<div  ng-controller="HeroCtrl">
+<section id="main">
 	<button type="button" class="btn btn-primary btn-lg" ng-click="tooglePushable(hero)" data-toggle="modal" data-target="#creationModal">Add another hero</button>
 	<ul>
 		<li ng-repeat="hero in heroesData">
@@ -9,6 +10,7 @@
 					<button type="button" class="btn btn-danger" ng-click="deleteHero(hero.id)">Delete</button>
 		</li>
 	</ul>
+</section>
 	<!-- Modal -->
 <div class="modal fade" id="creationModal" tabindex="-1" role="dialog" aria-labelledby="creationModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -18,18 +20,37 @@
         <h4 class="modal-title" id="creationModalLabel">Add another hero</h4>
       </div>
       <div class="modal-body">
-      	what is your name?
+      	<br/>
+      	<br/>
+      	<br/>
+      	<br/>
+      	<br/>
+      	What is your name?
         <input class="form-control" type="text" ng-model="hero.name" ng-show="pushable"/>
-      	first of all, are you a boy or a girl?
-        <input class="form-control" type="text" ng-model="hero.sex" ng-show="pushable"/>
-        who are your ancestors?
-        <select class="form-control" ng-model="hero.race_id" ng-options="r.id as r.name for r in races" ng-show="pushable"/>
-        what is it that you are?
-        <select class="form-control" ng-model="hero.job_id" ng-options="j.id as j.name for j in jobs" ng-show="pushable"/>
-        Do you have a weapon?
-        <select class="form-control" ng-model="hero.weapon_id" ng-options="w.id as w.name for w in weapons" ng-show="pushable"/>
+        <br/>
+        Are you a boy or a girl?
+        <!-- <div class="clearfix"></div> -->
+        <div class="arrow-sex-left arrow-left" ng-click="changeSex()"><span class="glyphicon glyphicon-chevron-left"></span></div>
+        <div class="arrow-sex-right arrow-right" ng-click="changeSex()"><span class="glyphicon glyphicon-chevron-right"></span></div>
+        <div class="clearfix"></div>
+        
+        <br/>
+        Lineage
+        <!-- <div class="clearfix"></div> -->
+        <div class="arrow-race-left arrow-left" ng-click="changeRace('prev')"><span class="glyphicon glyphicon-chevron-left"></span></div>
+        <div class="arrow-race-right arrow-right" ng-click="changeRace('next')"><span class="glyphicon glyphicon-chevron-right"></span></div>
+        <div class="clearfix"></div>
+ 
+        <br/>
+ 		What will earn you living?
+        <select class="form-control" ng-model="hero.job_id" ng-options="j.id as j.name for j in jobs"></select>
+        <br/>
+        Select your companion:
+        <select class="form-control" ng-model="hero.weapon_id" ng-options="w.id as w.name for w in weapons"></select>
 
-      </div>
+
+        <div class="hero"></div>
+    </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary" ng-click="createHero(hero)" data-dismiss="modal" data-target="#creationModal">Save hero</button>
@@ -37,4 +58,59 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-</section>
+</div>
+
+    <script type="text/javascript">
+function toggleSex(hero){
+	if (hero.css('background-image').indexOf('fem') > -1){
+		hero.css('background-image','url(/images/heroes/human-male.png)');
+	}
+	else
+	{
+		hero.css('background-image','url(/images/heroes/human-fem.png)');
+	}
+}
+
+$('.arrow-sex-left, .arrow-sex-right').click(function(){
+  var hero = $('.hero'); 
+  hero.slideToggle('fast', function(){
+  	toggleSex(hero);
+  hero.slideToggle();
+});
+});
+
+$('.arrow-race-left, .arrow-race-right').click(function(){
+	var hero = $('.hero'); 
+	var bgHero = hero.css('background-image').replace('http://127.0.0.1:9000', '');
+	var direction = this.className.indexOf('arrow-race-right') > -1 ? 1 : -1
+
+	hero.slideToggle('fast', function(){
+	  	var races = [
+	  	'url(/images/heroes/human-fem.png)',
+		'url(/images/heroes/floran-fem.png)',
+		'url(/images/heroes/avian-fem.png)',
+		'url(/images/heroes/glitch-fem.png)',
+		'url(/images/heroes/human-male.png)',
+		'url(/images/heroes/floran-male.png)',
+		'url(/images/heroes/avian-male.png)',
+		'url(/images/heroes/glitch-male.png)'
+	  	];
+	  	
+	  	if (hero.css('background-image').indexOf('fem') > -1){
+			var bgs = races.filter(function(race){
+				return race.indexOf('fem') > -1;
+			})
+			hero.css('background-image', bgs[bgs.indexOf(bgHero) + direction]);
+
+	  	}
+	  	else {
+	  		var bgs = races.filter(function(race){
+				return race.indexOf('male') > -1;
+			})
+	  		hero.css('background-image', bgs[bgs.indexOf(bgHero) + direction]);
+	  	}
+	  	hero.slideToggle();
+
+	});
+});
+</script>
