--- a/app/views/jobs.html
+++ b/app/views/jobs.html
@@ -1,3 +1,4 @@
+<div  ng-controller="JobCtrl">
 <section id="main" ng-controller="JobCtrl">
 	<table class="table">
 		<thead>
@@ -28,6 +29,8 @@
 			</tr>
 		</tbody>
 	</table>
+</section>
+
 	<!-- Modal -->
 <div class="modal fade" id="creationModal" tabindex="-1" role="dialog" aria-labelledby="creationModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -47,4 +50,4 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-</section>
+</div>
