--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div id="content" ng-model="roleData">
+<div id="main" ng-model="roleData">
   <div class="jumbotron">
     <h1>Good e'en, sirrah!</h1>
     <p class="lead">
@@ -12,21 +12,3 @@
     <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
   </div>
 
-  <div class="row marketing">
-    <h4>HTML5 Boilerplate</h4>
-    <p>
-      HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-    </p>
-
-    <h4>Angular</h4>
-    <p>
-      AngularJS is a toolset for building the framework most suited to your application development.
-    </p>
-
-    <h4>Karma</h4>
-    <p>Spectacular Test Runner for JavaScript.</p>
-  </div>
-  </div>
-<div class="footer">
-  <p>♥ from the Yeoman team</p>
-</div>
