Fully functional. Master

--- a/app/views/jobs.html
+++ b/app/views/jobs.html
@@ -1,5 +1,6 @@
 <div  ng-controller="JobCtrl">
-<section id="main" ng-controller="JobCtrl">
+	    <div class="alert alert-info" ng-show="status">{{status}}</div>
+<section id="main" class="panel panel-default">
 	<table class="table">
 		<thead>
 			<tr class="row">
