--- a/app/views/weapon.html
+++ b/app/views/weapon.html
@@ -1,5 +1,6 @@
 <div ng-controller="WeaponCtrl">
-<section id="main" ng-controller="WeaponCtrl">
+	    <div class="alert alert-info" ng-show="status">{{status}}</div>
+<section id="main" class="panel panel-default">
 	<table class="table">
 		<thead>
 			<tr class="row">
