--- a/app/views/hero.html
+++ b/app/views/hero.html
@@ -1,15 +1,50 @@
 <div  ng-controller="HeroCtrl">
-<section id="main">
-	<button type="button" class="btn btn-primary btn-lg" ng-click="tooglePushable(hero)" data-toggle="modal" data-target="#creationModal">Add another hero</button>
-	<ul>
+	    <div class="alert alert-info" ng-show="status">{{status}}</div>
+<section id="main" class="panel panel-default">
+	<!-- This code will be used in the future for templating purposes -->
+	<!-- <ul class="">
 		<li ng-repeat="hero in heroesData">
 			<h4 class="heroname"><a href="#">{{hero.name}}</a></h4>,is my name. I am a {{hero.race}} from the highlands at the west, a fine {{hero.job}}, if you ask me, and
 			my mighty weapon is the {{hero.weapon}}
 			<button type="button" class="btn btn-primary" ng-show="hero.editable" ng-click="updateHero(hero)">Grabar</button>
-					<button type="button" class="btn btn-primary" ng-show="!hero.editable" ng-click="toogleEditable(hero)">Edit</button>
+					<button type="button" class="btn btn-primary" ng-show="!hero.editable" ng-click="edit(heroes[$index])" data-toggle="modal" data-target="#creationModal">Edit</button>
 					<button type="button" class="btn btn-danger" ng-click="deleteHero(hero.id)">Delete</button>
 		</li>
-	</ul>
+	</ul> -->
+
+	<table class="table">
+		<thead>
+			<tr class="row">
+				<th class="col-md-2">
+					Hero
+				</th>
+				<th class="col-md-2">Sex</th>
+				<th class="col-md-2">Race</th>
+				<th class="col-md-2">Job</th>
+				<th class="col-md-2">Weapon</th>
+
+				<th class="col-md-3">
+					<button type="button" class="btn btn-primary btn-lg" ng-click="tooglePushable(hero)" data-toggle="modal" data-target="#creationModal">Add another hero</button>
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr class="row" ng-repeat="hero in heroesData">
+				<td  class="col-md-2">
+					    {{hero.name}}
+				</td>
+				<td class="col-md-2">{{hero.sex}}</td>
+				<td class="col-md-2">{{hero.race}}</td>
+				<td class="col-md-2">{{hero.job}}</td>
+				<td class="col-md-2">{{hero.weapon}}</td>
+
+				<td class="col-md-3">
+					<button type="button" class="btn btn-primary" ng-show="!hero.editable" ng-click="edit(heroes[$index])" data-toggle="modal" data-target="#creationModal">Edit</button>
+					<button type="button" class="btn btn-danger" ng-click="deleteHero(hero.id)">Delete</button>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 </section>
 	<!-- Modal -->
 <div class="modal fade" id="creationModal" tabindex="-1" role="dialog" aria-labelledby="creationModalLabel" aria-hidden="true">
@@ -26,16 +61,18 @@
       	<br/>
       	<br/>
       	What is your name?
-        <input class="form-control" type="text" ng-model="hero.name" ng-show="pushable"/>
+        <input class="form-control" type="text" ng-model="hero.name"/>
         <br/>
-        Are you a boy or a girl?
+        <span ng-show="!hero.sex"> Are you a boy or a girl?</span>
+        <span ng-show="hero.sex">{{hero.sex}}</span>
         <!-- <div class="clearfix"></div> -->
         <div class="arrow-sex-left arrow-left" ng-click="changeSex()"><span class="glyphicon glyphicon-chevron-left"></span></div>
         <div class="arrow-sex-right arrow-right" ng-click="changeSex()"><span class="glyphicon glyphicon-chevron-right"></span></div>
         <div class="clearfix"></div>
         
         <br/>
-        Lineage
+        <span ng-show="!hero.race_id"> Lineage</span>
+        <span ng-show="hero.race_id">{{race}}</span>
         <!-- <div class="clearfix"></div> -->
         <div class="arrow-race-left arrow-left" ng-click="changeRace('prev')"><span class="glyphicon glyphicon-chevron-left"></span></div>
         <div class="arrow-race-right arrow-right" ng-click="changeRace('next')"><span class="glyphicon glyphicon-chevron-right"></span></div>
@@ -53,7 +90,8 @@
     </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" ng-click="createHero(hero)" data-dismiss="modal" data-target="#creationModal">Save hero</button>
+        <button type="button" class="btn btn-primary" ng-show="!hero.editable" ng-click="createHero(hero)" data-dismiss="modal" data-target="#creationModal">Save hero</button>
+        <button type="button" class="btn btn-primary" ng-show="hero.editable" ng-click="updateHero(hero)" data-dismiss="modal" data-target="#creationModal">Edit hero</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
@@ -85,7 +123,21 @@ $('.arrow-race-left, .arrow-race-right').click(function(){
 	var direction = this.className.indexOf('arrow-race-right') > -1 ? 1 : -1
 
 	hero.slideToggle('fast', function(){
-	  	var races = [
+	  	
+	  	
+	  	if (hero.css('background-image').indexOf('fem') > -1){
+			changeRaceSprite('fem', hero, bgHero, direction);
+	  	}
+	  	else {
+			changeRaceSprite('male', hero, bgHero, direction);
+	  	}
+	  	hero.slideToggle();
+
+	});
+});
+
+function changeRaceSprite(sex, hero, spriteHero, direction){
+	var races = [
 	  	'url(/images/heroes/human-fem.png)',
 		'url(/images/heroes/floran-fem.png)',
 		'url(/images/heroes/avian-fem.png)',
@@ -95,22 +147,12 @@ $('.arrow-race-left, .arrow-race-right').click(function(){
 		'url(/images/heroes/avian-male.png)',
 		'url(/images/heroes/glitch-male.png)'
 	  	];
-	  	
-	  	if (hero.css('background-image').indexOf('fem') > -1){
 			var bgs = races.filter(function(race){
-				return race.indexOf('fem') > -1;
-			})
-			hero.css('background-image', bgs[bgs.indexOf(bgHero) + direction]);
-
-	  	}
-	  	else {
-	  		var bgs = races.filter(function(race){
 				return race.indexOf('male') > -1;
 			})
-	  		hero.css('background-image', bgs[bgs.indexOf(bgHero) + direction]);
-	  	}
-	  	hero.slideToggle();
-
-	});
-});
+			var index = bgs.indexOf(spriteHero) + direction;
+			if (index >= 0 && index < bgs.length) {
+	  			hero.css('background-image', bgs[index]);
+	  		}
+}
 </script>
